add instructions for sling deployment